--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/kirodi1996/-Learn-react#readme",
   "devDependencies": {
     "parcel": "^2.13.0",
+    "prettier": "3.3.3",
     "process": "^0.11.10"
   },
   "dependencies": {
